created html files

--- a/references.html
+++ b/references.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Template</title>
+        <title>Fan Site - References</title>
 
         <link rel="stylesheet" type="text/css" href="main.css">
     </head>
     <body>
-        <a href="index.html"><div id="banner">
+        <a href="index.html">
+        	<div id="banner">
         	<h1>My Awesome Fan Site!!!!</h1>
-        </div></a>
+        	</div>
+    	</a>
 		<div id="nav">
 			<a href="about.html">About</a>
 			<a href="contact.html">Contact</a>
@@ -17,7 +19,12 @@
 			<a href="references.html">Refernces</a>
 		</div>
 		<div id="wrapper">
-			<div id="main"></div>
+			<div id="main">
+				<ul>
+					<li>“Video Game.” Wikipedia, Wikimedia Foundation, 20 Nov. 2017, en.wikipedia.org/wiki/Video_game.</li>
+				</ul>
+
+			</div>
 			<div id="aside"></div>
 		</div>
 		<div id="footer">Copyright &copy; Mr. D. 2017</div>
