--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <a href="index.html"><div id="banner">
-        	<h1>My Awesome Fan Site!!!!</h1>
+        	<h1>My Awesome Fan Site!!!!!!!</h1>
         </div></a>
 		<div id="nav">
 			<a href="about.html">About</a>
